<resources>
    <string name="app_name">Fuel Monitoring</string>
    <string name="tab_text_1">User</string>
    <string name="tab_text_2">Admin</string>
    <string name="tab_text_3">About</string>
    <string name="user_icon">User Icon</string>
    <string name="password">Enter your password</string>
    <string name="username">username</string>
    <string name="the_fuel_monitoring_system">The Fuel Monitoring System</string>
    <string name="this_application_was_developed_by">This Application was developed by:</string>
    <string name="we_hope_this_application_benefits_you_users">We hope this application benefits you users!</string>
    <string name="_1_pratik_nesarkar">1. Pratik Nesarkar</string>
    <string name="_4_rohan_bevinkatti">4. Rohan Bevinkatti</string>
    <string name="_2_rushikesh_nale">2. Rushikesh Nale</string>
    <string name="_3_saish_kankekar">3. Saish Kankekar</string>
    <string name="the_students_of_b_e_i_t">the students of B.E. (I.T.),</string>
    <string name="button">Button</string>
    <string name="_5_shreeyash_kulkarni">5. Shreeyash Kulkarni</string>
    <string name="project_guide_miss_m_s_patil">Project Guide: Miss M. S. Patil</string>
    <string name="the_fuel_monitoring_system_is_fully_automotive_system_that_will_detect_possible_fuel_frauds_at_the_fuel_stations_and_also_help_the_users_keep_a_track_of_the_daily_fuel_usage_the_application_will_track_the_fuel_usage_by_the_user_and_analyse_the_data_to_produse_effective_outputs_which_will_benifit_the_user_this_application_will_give_the_user_the_ability_to_store_his_her_data_onto_the_server_which_will_enable_the_user_to_access_the_data_from_almost_anywhere_at_anytime_the_application_will_take_user_feedback_regarding_the_fuel_stations_and_provide_the_other_users_with_appropriate_suggestions_to_find_a_good_fuel_station_where_frauds_occur_in_less_amount_the_system_interfaces_with_a_arduino_uno_board_mounted_onto_his_her_vehicle_which_will_process_the_data_provided_by_the_flow_sensor_this_will_give_the_user_information_about_the_amount_of_fuel_being_filled_into_the_vehicle_at_real_time_accurately_hence_notifying_the_user_in_case_of_fraud_to_avoid_the_financial_loss_of_users_along_with_this_the_system_will_calculate_the_amount_of_fuel_left_in_the_fuel_tank_accurately_and_notify_the_user_if_the_fuel_level_is_low_not_just_this_but_also_providing_the_user_directions_to_the_nearby_fuel_station_with_good_ratings">
        The Fuel Monitoring System is fully automotive system, that will detect possible fuel frauds at the fuel stations and also help the users keep a track of the daily fuel usage. The application will track the fuel usage by the user and analyse the data to produce effective outputs which will benefit the user. This application will give the user the ability to store his/her data onto the server which will enable the user to access the data from almost anywhere, at anytime. The application will take user feedback regarding the fuel stations and provide the other users with appropriate suggestions to find a good fuel station where frauds occur in less amount. The system interfaces with a Arduino UNO board mounted onto his/her vehicle which will process the data provided by the flow sensor. This will give the user information about the amount of fuel being filled into the vehicle at real-time accurately, hence notifying the user in case of fraud to avoid the financial loss of users. Along with this, the system will calculate the amount of fuel left in the fuel tank accurately and notify the user if the fuel level is low. Not just this, but also providing the user directions to the nearby fuel station with good ratings.</string>
    <string name="as_a_part_of_the_mega_project_for_the_year_2019_20">as a part of the Mega Project for the Year 2019-20.</string>
    <string name="contact_us">Contact US</string>
    <string name="department_of_information_technology_kit_s_college_of_engineering_autonomous_kolhapur">Department of Information Technology, KIT\'s College of Engineering (Autonomous), Kolhapur</string>
    <string name="enter_e_mail_here">Enter e-mail here</string>
    <string name="submit">Submit</string>
    <string name="admin_login">Admin Login</string>
    <string name="login">Login</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="todo">todo</string>
    <string name="forgot_password_click_here">Forgot password? Click Here</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="or">or</string>
    <string name="title_activity_admin_home">AdminHome</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_linked_contact_no">Enter linked contact no.</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="resend">Resend</string>
    <string name="welcome_to_your_profile">Welcome to your Profile</string>
    <string name="welcome_to_your_profile_user">Welcome to your Profile User</string>
    <string name="logout">Logout</string>
    <string name="update_profile">Update Profile</string>
    <string name="fuel_level">Fuel Level</string>
    <string name="daily_usage">Daily Usage</string>
    <string name="annual_usage">Annual Usage</string>
    <string name="average">Average</string>
    <string name="nearby_stations">Nearby Stations</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="monthly_usage">Monthly Usage</string>
    <string name="communicate">Communicate</string>
    <string name="weekly_usage">Weekly Usage</string>
    <string name="fuel_levels_here">Fuel Levels Here</string>
    <string name="send_e_mail">Send e-mail</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile_form">Update Profile Form</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_contact_no">Enter Contact No</string>
    <string name="new_admin_register_here">New Admin? Register Here</string>
    <string name="find_nearby_fuel_stations">Find Nearby Fuel Stations</string>
    <string name="show_map">Show Map</string>
    <string name="textview">TextView</string>
    <string name="fuel_monitoring_system">Fuel Monitoring System</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_get_nearby_stations">Map</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_form">Feedback Form</string>
    <string name="rate_the_ease_of_use_of_the_app">Rate the Ease-of-Use of the app:</string>
    <string name="rate_the_efficiency_of_the_app">Rate the Efficiency of the app:</string>
    <string name="rate_the_ui_of_the_app">Rate the UI of the app:</string>
    <string name="rate_the_accuracy_of_the_app">Rate the Accuracy of the app:</string>
    <string name="any_issues_faced_during_the_usage_optional">Any issues faced during the usage (optional):</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="views_for_scope_of_improvement_if_any">Views for scope of improvement, if any:</string>
    <string name="x">---</string>
    <string name="price_rs">Price (Rs.) :</string>
    <string name="last_fuel_in">Last Fuel in:</string>
    <string name="user_name">User name:</string>
    <string name="today_s_petrol_price">Today\'s Petrol Price</string>
    <string name="todo1">TODO</string>
    <string name="today_s_fuel_price">Today\'s Fuel Price</string>
    <string name="e_mail">Enter your e-mail</string>
    <string name="fuel_price_today">Fuel Price Today</string>
    <string name="today_s_date">Today\'s Date:</string>
    <string name="fuel_prices">Fuel Prices:</string>
    <string name="xx">--/--</string>
    <string name="kolhapur">Kolhapur</string>
    <string name="mumbai">Mumbai</string>
    <string name="pune">Pune</string>
    <string name="upload_prices">Upload Prices</string>
    <string name="show_graphical_stats">Show Graphical Stats</string>
    <string name="contact_emails">Contact e-mails</string>
    <string name="view_application_users">View Application Users</string>
    <string name="fuel_usage_for_current_month">Fuel usage for Current Month</string>
    <string name="total_money_spent">Total Money Spent:</string>
    <string name="x_axis_week_of_month">x-axis: Week of Month</string>
    <string name="y_axis_amount_of_fuel_l">y-axis: Amount of Fuel (L)</string>
    <string name="yyy">---/---</string>
    <string name="total_amt_used">Total Amt Used</string>
    <string name="fuel_cost_for_current_month">Fuel cost for Current Month</string>
    <string name="y_axis_cost_of_fuel_rs">y-axis: Cost of Fuel (Rs)</string>
    <string name="etr">---/---</string>
    <string name="fuel_usage_for_current_week" />
    <string name="string_fuel_usage_for_current_week">Fuel Usage for Current Week</string>
    <string name="x_axis_day_of_week">x-axis: Day of Week</string>
    <string name="fsf">---/---</string>
    <string name="fuel_cost_for_current_week">Fuel Cost for Current Week</string>
    <string name="sdfsdf">---/---</string>
    <string name="fuel_usage_on_day_to_day_basis">Fuel Usage Today</string>
    <string name="fuel_cost_on_day_to_day_basis">Fuel Cost Today</string>
    <string name="hrs_of_day">x-axis: Hours of Day</string>
    <string name="view_update_your_profile">View / Update your Profile</string>
    <string name="_0_0">0.0</string>
    <string name="give_application_feedback">GIve Application Feedback</string>
    <string name="total_fuel_used_today">Daily Fuel Usage</string>
    <string name="l">/L</string>
    <string name="city">City :</string>
    <string name="enter_strong_password">Enter Strong Password</string>
    <string name="enter_secret_code">Enter Secret Code</string>
    <string name="register_button">Register Button</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="fuel_monitoring">Fuel Monitoring</string>
    <string name="user_profile_details">User Profile Details</string>
    <string name="back">Back</string>
    <string name="select_city">Select City</string>
    <string name="re_enter_above_password">Re-enter above password</string>
    <string name="register">Register</string>
    <string name="enter_a_strong_password">Enter a strong password</string>
    <string name="registration_form">Registration Form</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="amount">Amount</string>
    <string name="welcome_to_adminhome">Welcome to AdminHome</string>
    <string name="com_android_fuelmonitoring_user">com.android.fuelmonitoring@user</string>
    <string name="user_feedback">User Feedback</string>
    <string name="view_users">View Users</string>
    <string name="qqq">--</string>
    <string name="view_system_users">View System Users</string>
    <string name="update_today_s_fuel_price">Update Today\'s Fuel Price</string>
</resources>