<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/fuel_level"
            android:icon="@drawable/ic_fuel_level_24dp"
            android:title="@string/fuel_level" />
        <item
            android:id="@+id/daily_usage"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/daily_usage" />
        <item
            android:id="@+id/weekly_usage"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/weekly_usage" />
        <item
            android:id="@+id/monthly_usage"
            android:icon="@drawable/ic_monthly_24dp"
            android:title="@string/monthly_usage" />
        <item
            android:id="@+id/nearby_stations"
            android:icon="@drawable/gas"
            android:title="@string/nearby_stations" />
        <item
            android:id="@+id/add_vehicle"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/add_vehicle" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
