<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/view_users"
            android:icon="@drawable/ic_view_users"
            android:title="View Users" />
        <item
            android:id="@+id/fuel_price_today"
            android:icon="@drawable/gas"
            android:title="@string/today_s_fuel_price" />
        <item
            android:id="@+id/contact_emails"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/contact_emails" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
