<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView44"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bordercayn"
        android:gravity="center"
        android:text="@string/weekly_usage"
        android:textColor="#00897B"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/string_fuel_usage_for_current_week"
                android:textColor="#F8F8F8"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/x_axis_day_of_week"
                android:textColor="#00897B"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/y_axis_amount_of_fuel_l"
                android:textColor="#00897B"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/weeklyUsageGraphAmt"
                android:layout_width="match_parent"
                android:layout_height="365dp"
                android:layout_margin="10dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="40dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/graphbg"
                android:padding="10dp">

            </com.github.mikephil.charting.charts.LineChart>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalAmt"
                    android:layout_width="177dp"
                    android:layout_height="45dp"
                    android:background="@drawable/circle"
                    android:gravity="center"
                    android:text="@string/total_amt_used"
                    android:textColor="#0A0A0A"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/weeklytotalamtTv"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@drawable/ovaledittext"
                    android:gravity="center"
                    android:text="@string/fsf"
                    android:textColor="#FCFCFC"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/fuel_cost_for_current_week"
                android:textColor="#F8F8F8"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/x_axis_day_of_week"
                android:textColor="#00897B"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/y_axis_cost_of_fuel_rs"
                android:textColor="#00897B"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/weeklyUsageGraphPrice"
                android:layout_width="match_parent"
                android:layout_height="365dp"
                android:layout_margin="10dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/graphbg">

            </com.github.mikephil.charting.charts.LineChart>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="80dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="177dp"
                    android:layout_height="45dp"
                    android:background="@drawable/circle"
                    android:gravity="center"
                    android:text="@string/total_money_spent"
                    android:textColor="#0A0A0A"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/weeklytotalpriceTv"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@drawable/ovaledittext"
                    android:gravity="center"
                    android:text="@string/sdfsdf"
                    android:textColor="#FCFCFC"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>