<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090909"
    tools:context=".admin.AdminFgtPassword"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bordercayn"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textColor="#00897B"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userEmail"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:autofillHints=""
        android:background="@drawable/ovaledittext"
        android:ems="10"
        android:hint="@string/enter_e_mail_here"
        android:inputType="text|textEmailAddress"
        android:textColor="#FCFCFC"
        android:textColorHint="#7CF8F7F7"
        android:textStyle="bold"
        tools:targetApi="o" />

    <Button
        android:id="@+id/sendmailbtn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_weight="0"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="@string/send_e_mail"
        android:textAllCaps="false"
        android:textColor="#030000"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>